// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 1 1`] = `
"<td class="row__cell row__cell--body row__cell--primary">
  <div class="cell__title">Section 1101</div>
  <div class="cell__usc-label">42 U.S.C. 1301</div>
  <div class="cell__name">Definitions</div>
</td>"
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 2 1`] = `
"<td class="row__cell row__cell--body row__cell--secondary"><a class="external" href="https://uscode.house.gov/view.xhtml?hl=false&amp;edition=prelim&amp;req=granuleid%3AUSC-prelim-title42-section1301" target="_blank" rel="noopener noreferrer"><span class="table-link__span">1301</span>
    <!--v-if-->
  </a></td>"
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 3 1`] = `"<td class="row__cell row__cell--body row__cell--secondary"><a class="pdf" href="https://www.govinfo.gov/content/pkg/COMPS-8763/pdf/COMPS-8763.pdf" target="_blank" rel="noopener noreferrer"><span class="table-link__span">Title XI</span><span class="result__link--file-type">PDF</span></a></td>"`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 4 1`] = `"<td class="row__cell row__cell--body row__cell--secondary"><a class="pdf" href="https://www.govinfo.gov/link/uscode/42/1301" target="_blank" rel="noopener noreferrer"><span class="table-link__span">1301</span><span class="result__link--file-type">PDF</span></a></td>"`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 5 1`] = `
"<td class="row__cell row__cell--body row__cell--secondary"><a class="external" href="https://www.ssa.gov/OP_Home/ssact/title11/1101.htm" target="_blank" rel="noopener noreferrer"><span class="table-link__span">1101</span>
    <!--v-if-->
  </a></td>"
`;

exports[`Statute Table Body Cell > SSA table type > displays 'None' in Statute Compilation BodyCell when source_url is null 1`] = `"<td class="row__cell row__cell--body row__cell--secondary"><span data-testid="1302-none">None</span></td>"`;
